<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RoomMapApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="back">Back</string>
    <string name="load_room">Load Room</string>
    <string name="create_room">Create Room</string>
    <string name="delete_room">Delete Room</string>
    <string name="create_furniture">Create Furniture</string>
    <string name="lookup_furniture">Lookup Furniture</string>
    <string name="modify_room">Modify Room</string>
    <string name="view_furniture">View Furniture</string>
    <string name="length">Length</string>
    <string name="width">Width</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="room_dim">Enter Room Dimensions</string>
    <string name="modify_room_dim">Enter New Room Dimensions</string>
    <string name="create_furniture_dim">Enter Furniture Parameters</string>
    <string name="modify_furniture_dim">Modify Furniture Parameters</string>
    <string name="container">Container?</string>
    <string name="furniture_guid">Furniture GUID</string>
    <string name="select_furniture">Select a Furniture Item</string>
    <string name="select_room">Select a Room</string>
    <string name="furniture_lookup">Enter a Furniture GUID</string>
    
    <string-array name="shapes">
        <item>Rectangle</item>
        <item >Oval</item>
    </string-array>
    
    <string-array name="furnitureList">
    </string-array>
    

</resources>
