<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/TopButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_weight="1">
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:textSize="14dp"
            android:text="@string/back" >
            
        </Button>

         <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_room" 
            android:layout_weight="1" >
            
        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_room" 
            android:layout_weight="1" >
            
        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_room" 
            android:layout_weight="1" >
            
        </Button>

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/RoomViewer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_below="@+id/TopButtons"
        android:layout_above="@+id/BottomButtons" >
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/BottomButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_alignParentBottom="true">
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_furniture" 
            android:layout_weight="1" >
            
        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lookup_furniture" 
            android:layout_weight="1" >
            
        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modify_room" 
            android:layout_weight="1" >
            
        </Button>
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_furniture" 
            android:layout_weight="1" >
            
        </Button>
        
    </LinearLayout>
    
    

</RelativeLayout>
